WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125113
AX: Crash in accessibilityRoot when Document goes away
https://bugs.webkit.org/show_bug.cgi?id=125113
Summary
AX: Crash in accessibilityRoot when Document goes away
chris fleizach
Reported
2013-12-02 15:23:53 PST
This crash is happening to VoiceOver users on iOS Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Subtype: KERN_INVALID_ADDRESS at 0x0000000000000038 Triggered by Thread: 0 Thread 0 Crashed: 0 WebCore 0x000000018f27bbb4 WTF::HashMap<WebCore::Widget*, unsigned int, WTF::PtrHash<WebCore::Widget*>, WTF::HashTraits<WebCore::Widget*>, WTF::HashTraits<unsigned int> >::get(WebCore::Widget* const&) const + 8 (HashTable.h:609) 1 WebCore 0x000000018f2571c4 WebCore::AXObjectCache::getOrCreate(WebCore::Widget*) + 48 (AXObjectCache.cpp:322) 2 WebKit 0x000000018fd2b84c -[WebFrame(WebPrivate) accessibilityRoot] + 112 (WebFrame.mm:2182) 3 WebKit 0x000000018fd46830 -[WebHTMLView accessibilityHitTest:] + 56 (WebHTMLView.mm:4688) The AXObjectCache is returning nil
Attachments
patch
(1.63 KB, patch)
2013-12-02 15:50 PST
,
chris fleizach
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2013-12-02 15:24:02 PST
<
rdar://problem/15564742
>
chris fleizach
Comment 2
2013-12-02 15:50:13 PST
Created
attachment 218231
[details]
patch
chris fleizach
Comment 3
2013-12-03 10:43:12 PST
http://trac.webkit.org/changeset/160015
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug