AX: Crash in accessibilityRoot when Document goes away https://bugs.webkit.org/show_bug.cgi?id=125113

Reviewed by Tim Horton.

The AXObjectCache can sometimes be null if the render tree has been detached from the document.

* WebView/WebFrame.mm:
(-[WebFrame accessibilityRoot]):



Canonical link: https://commits.webkit.org/143255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160015 268f45cc-cd09-0410-ab3c-d52691b4dbfc